@@ -1,7 +1,7 @@
 package com.school.management.student.service;
 
-import com.school.management.student.dto.CourseDto;
 import com.school.management.common.response.ApiResponse;
+import com.school.management.student.dto.CourseDto;
 import com.school.management.student.model.Course;
 import com.school.management.student.repository.CourseRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,13 +9,16 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class CourseService {
 
+    private final CourseRepository courseRepository;
+
     @Autowired
-    private CourseRepository courseRepository;
+    private CourseService(CourseRepository courseRepository) {
+        this.courseRepository = courseRepository;
+    }
 
     public ApiResponse<Boolean> saveCourse(final String courseName) {
         final Course course = new Course();
@@ -27,8 +30,8 @@ public class CourseService {
     public ApiResponse<Map<String, List<CourseDto>>> getCourses() {
         var data = courseRepository.findAll().parallelStream().map(course -> new CourseDto(
                 course.getId(),
-                course.getName())).collect(Collectors.toList());
-        return ApiResponse.<Map<String, List<CourseDto>>>builder().data(Map.of("courses",data)).build();
+                course.getName())).toList();
+        return ApiResponse.<Map<String, List<CourseDto>>>builder().data(Map.of("courses", data)).build();
     }
 
 }
